<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="Netology_author" translatable="false"> Нетология - университет интернет-профессий будущего.</string>
    <string name="Netology_published" translatable="false">21 мая в 18:36</string>
    <string name="Netology_content" translatable="false">
    Привет, это Нетология.
    Мы начинали с курсов об онлайн-маркетинге
    Затем выросли в университет интернет-профессий: учили дизайнеров, аналитиков, программистов, менеджеров, маркетологов… Но обучать новым профессиям — это не предел. Мы продолжаем расти
    Сегодня мы даём знания не только начинающим, но и тем, кто давно в профессии. Специалисты изучают новые инструменты, топ-менеджеры — получают степень MBA, руководители бизнеса — обучают своих сотрудников и обучаются сами
    Нетология помогает расти на всех этапах карьеры — получать знания на старте и открывать новые высоты.</string>
    <string name="format_million" translatable="false">%.1fM</string>
    <string name="format_thousand" translatable="false">%.1fK</string>
    <string name="description_like" translatable="false">Like</string>
    <string name="description_share" translatable="false">Share</string>
    <string name="description_post_save" translatable="false">Save</string>
    <string name="post_text" translatable="false">Post text</string>
    <string name="description_view_count" translatable="false">View Count</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_added">Added</string>
    <string name="edit_heading">Нетология</string>
    <string name="edit_message">Edit Message</string>
    <string name="error_empty_content" translatable="false">Content can`t be empty</string>
    <string name="chooser_share_post">Share</string>
    <string name="video_preview" translatable="false">Video preview</string>
    <string name="play_video" translatable="false">Play video</string>
    <string name="content_description_video_preview" translatable="false">Preview of the video</string>
    <string name="channel_remote_name" translatable="false">Server notification</string>
    <string name="channel_remote_description" translatable="false">Notification from remote server</string>
    <string name="hello" translatable="false">Hello World!</string>
    <string name="add_post" translatable="false">Add post</string>
    <string name="save" translatable="false">Save</string>
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="Add_new_post" translatable="false">Add new post</string>
    <string name="new_post_from">%s posted a new post:</string>



</resources>