<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".activity.MainActivity">



    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/netology" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:singleLine="true"
        android:text="@string/Netology_author"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/Netology_published"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        style="@style/App.Widget.MenuButton"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/ic_more_vert"
        app:iconTint="?attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:layout_marginTop="16dp"
        android:text="@string/Netology_content"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierTop" />



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="contentTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeImageView"
        style="@style/App.Widget.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/description_like"
        android:padding="8dp"
        app:icon="@drawable/ic_like_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentTextView"
        app:layout_constraintTop_toTopOf="@id/barrierBottom"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/description_share"
        style="@style/App.Widget.ShareButton"
        android:padding="8dp"
        app:iconTint="?attr/colorControlNormal"
        app:icon="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@+id/likeImageView"
        app:layout_constraintStart_toEndOf="@+id/likeImageView"
        app:layout_constraintTop_toTopOf="@id/barrierBottom" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewIcon"
        style="@style/App.Widget.ViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_view_count"
        app:icon="@drawable/ic_view"
        app:iconTint="?attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="@+id/shareImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierBottom" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/video_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/contentTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/video_preview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_video_preview"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_video_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentTextView" />

    <ImageView
        android:id="@+id/video_play"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/play_video"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="@+id/video_preview"
        app:layout_constraintEnd_toEndOf="@+id/video_preview"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/video_preview"
        app:layout_constraintTop_toTopOf="@+id/video_preview" />

</androidx.constraintlayout.widget.ConstraintLayout>

